spacing and placement error correction

--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -9,8 +9,8 @@
 
   <body>
 
-    <h1>Best Chocolate Chip Cookies
-    <img src="http://lorempixel.com/400/200/" alt="An image of a cookie" /></h1>
+    <h1>Best Chocolate Chip Cookies</h1>
+    <img src="http://lorempixel.com/400/200/" alt="An image of a cookie" />
 
     <p>This recipe is from my dad and they are a favorite among friends and family.
       The secret ingredient is the coconut! <em>Be warned</em>, these will fly off of the plate!        </p>
@@ -20,8 +20,8 @@
     <ul>
       <li> Butter</li>
       <li> White sugar</li>
-      <li> Brown sugar
-      <li> Eggs
+      <li> Brown sugar </li>
+      <li> Eggs</li>
       <li> Vanilla</li>
       <li> Flour</li>
       <li> Baking soda</li>
@@ -44,5 +44,6 @@
 
     <p><a href="http://allrecipes.com">Click here</a> to check out my other great recipes.</p>
 
+  </body>
 </html>
-</body>
+
